avif: return `false` in `canRead()` when `imageIndex >= imageCount`

Otherwise when `cache: false` is set in AnimatedImage, QMovie will try
to read the image forever.

BUG: 460085
FIXED-IN: 5.100